--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -116,9 +116,9 @@ html {
 
 .nav-link-logo {
   font-size: 1.8em;
-  color: #000000;
-  background-color: #ffffff;
-  border: 4px solid #ffffff;
+  color: #2d6a4f;
+  background-color: #d0f4de;
+  border: 4px solid #d0f4de;
   border-radius: 50%;
   margin: 0px 10px 0px 0px;
 }
