--- a/src/components/SkillsCard/index.css
+++ b/src/components/SkillsCard/index.css
@@ -6,7 +6,7 @@
 .skill-img {
   width: 100px;
   border: 2px solid #ffffffd8;
-  border-radius: 100px;
+  border-radius: 50%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: 400ms ease-out;
 }
@@ -49,7 +49,9 @@
 .skills-scroll-item {
   opacity: 0;
   transform: translateY(100px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+  transition:
+    opacity 0.6s ease-out,
+    transform 0.6s ease-out;
   margin: 20px 0;
 }
 
