--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -138,6 +138,7 @@ html {
   justify-content: flex-start;
   align-items: center;
   padding: 0 15px 0 0;
+  filter: drop-shadow(2px 4px 16px rgb(0, 238, 255));
 }
 
 .nav-link-btn.active-tab-btn {
