--- a/src/components/ContactMeForm/index.css
+++ b/src/components/ContactMeForm/index.css
@@ -32,6 +32,7 @@
   color: #87a4b6;
   width: 100%;
   background-color: #002733;
+  filter: drop-shadow(2px 4px 64px rgb(0, 238, 255));
   border: none;
   outline: none;
   padding: 10px;
