--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -60,6 +60,7 @@
   margin-top: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   animation: moveUpDown 3s infinite alternate ease-in-out;
+  filter: drop-shadow(2px 4px 64px rgb(0, 238, 255));
 }
 
 @keyframes moveUpDown {
@@ -390,6 +391,7 @@
 
 .contact-me-img {
   width: 100%;
+  filter: drop-shadow(2px 4px 64px rgb(0, 238, 255));
 }
 
 /* pyramid loader */
@@ -544,7 +546,7 @@
 /*initial loader animation  */
 
 .initial-loader-cont {
-  background-color: #70a288;
+  background-color: #ffffff;
   height: 100vh;
   display: flex;
   justify-content: center;
